--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ fastapi-utils==0.2.1
 h11==0.9.0
 httptools==0.1.1
 iniconfig==1.0.1
+ipdb==0.13.3
 ipython==7.18.1
 ipython-genutils==0.2.0
 jedi==0.17.2
