--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ FastAPI-SQLAlchemy==0.1.6
 fastapi-utils==0.2.1
 h11==0.9.0
 httptools==0.1.1
+inflection==0.5.1
 iniconfig==1.0.1
 ipdb==0.13.3
 ipython==7.18.1
@@ -34,6 +35,7 @@ python-editor==1.0.4
 six==1.15.0
 SQLAlchemy==1.3.19
 SQLAlchemy-Utils==0.36.8
+SQLAlchemy-Wrapper==1.9.1
 starlette==0.13.6
 toml==0.10.1
 traitlets==5.0.4
