--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 alembic==1.4.3
 attrs==20.2.0
 backcall==0.2.0
+bcrypt==3.2.0
+cffi==1.14.3
 click==7.1.2
 decorator==4.4.2
+execnet==1.7.1
 fastapi==0.61.1
 fastapi-utils==0.2.1
 h11==0.9.0
@@ -18,6 +21,7 @@ MarkupSafe==1.1.1
 more-itertools==8.5.0
 packaging==20.4
 parso==0.7.1
+passlib==1.7.2
 pexpect==4.8.0
 pickleshare==0.7.5
 pluggy==0.13.1
@@ -25,6 +29,7 @@ prompt-toolkit==3.0.7
 psycopg2-binary==2.8.6
 ptyprocess==0.6.0
 py==1.9.0
+pycparser==2.20
 pydantic==1.6.1
 Pygments==2.7.1
 pyparsing==2.4.7
