--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
 alembic==1.4.3
+apipkg==1.5
 attrs==20.2.0
 backcall==0.2.0
 bcrypt==3.2.0
+certifi==2020.6.20
 cffi==1.14.3
+chardet==3.0.4
 click==7.1.2
 decorator==4.4.2
 execnet==1.7.1
+Faker==4.1.3
 fastapi==0.61.1
 fastapi-utils==0.2.1
 h11==0.9.0
 httptools==0.1.1
+idna==2.10
 inflection==0.5.1
 iniconfig==1.0.1
 ipdb==0.13.3
@@ -32,17 +37,24 @@ py==1.9.0
 pycparser==2.20
 pydantic==1.6.1
 Pygments==2.7.1
+PyJWT==1.7.1
 pyparsing==2.4.7
 pytest==6.0.2
+pytest-forked==1.3.0
+pytest-xdist==2.1.0
 python-dateutil==2.8.1
 python-editor==1.0.4
+python-multipart==0.0.5
+requests==2.24.0
 six==1.15.0
 SQLAlchemy==1.3.19
 SQLAlchemy-Utils==0.36.8
 SQLAlchemy-Wrapper==1.9.1
 starlette==0.13.6
+text-unidecode==1.3
 toml==0.10.1
 traitlets==5.0.4
+urllib3==1.25.10
 uvicorn==0.11.8
 uvloop==0.14.0
 wcwidth==0.2.5
